Changes for Stefan to fix the rotation resizing problem on iOS

--- a/specific/mobile/skin/sass/style-slide.sass
+++ b/specific/mobile/skin/sass/style-slide.sass
@@ -16,6 +16,7 @@ body, html
   font-size: 16px
   padding: 0
   margin: 0
+  -webkit-text-size-adjust: 100%
 
 .wrapper
   margin: 0 auto
